feat: Написать алгоритм преобразования транзакции т-банка #35
- Сделал соотношение категорий
- Поиск категорий
- Создание корректных системных транзакций
- Исправление ошибок